--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "name": "genmato/storesetup",
     "type": "magento2-module",
+    "version": "1.0.0",
     "description": "Magento2 Easy Store Setup and Configuration",
     "keywords": [
         "magento",
